name:                pg-simple-qq-alt
version:             0.1.0.0
synopsis:            Better quasi quotation for postgresql-simple

homepage:            https://github.com/jorpic/pg-simple-qq-alt
license:             PublicDomain
author:              Max Taldykin
maintainer:          jorpic@gmail.com

category:            Database
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:
    Database.PostgreSQL.Simple.SqlQQ.Alt

  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  hs-source-dirs:      src

  build-depends:
    base             >= 4.6 && < 4.8,
    template-haskell >= 2.8 && < 2.10,
    haskell-src-meta == 0.6.*,
    split            == 0.2.*


  default-extensions:
    TemplateHaskell, QuasiQuotes,
    LambdaCase
